# puffsat_impact_simulation

./: .gitignore  AGENTS.md  CLAUDE.md  CONCLUSION.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md  puffsat_impact_sim_design.md  pyproject.toml
.codex/: config.toml
crates/euler2d/: Cargo.toml
crates/euler2d/src/: bounce.rs  kernel.rs  lib.rs  plate.rs  riemann.rs  state.rs
crates/euler2d/tests/: eta_capture.rs  immersed.rs  noh.rs  order.rs  sedov.rs  sod.rs
crates/hydro1d/: Cargo.toml
crates/hydro1d/src/: conduction.rs  eos.rs  kernel.rs  lib.rs  radiation.rs  riemann.rs
crates/hydro1d/tests/: ablating.rs  bounce.rs  convergence.rs  sod.rs  suolson.rs  table_eos.rs
crates/smoke/: Cargo.toml
crates/smoke/src/: main.rs
crates/sweep/: Cargo.toml
crates/sweep/examples/: wall_temp_probe.rs
crates/sweep/src/: main.rs
crates/tables/: Cargo.toml
crates/tables/src/: lib.rs
data/results/: frontier.csv  frontier_ablating.csv  frontier_frozen.csv  frontier_frozen_heavyplate.csv  frontier_frozen_jupiter.csv  frontier_geometry.csv  frontier_heavyplate.csv  frontier_jupiter.csv  frontier_lowv.csv  frontier_margin.csv  frontier_structure_heavyplate.csv  frontier_survivability.csv  frontier_transitional.csv  shape_frozen_spotcheck.csv  shape_sensitivity.csv
data/tables/tops/: tops_water_gray.html
docs/adr/: 0001-restitution-from-wall-impulse.md  0002-rust-core-python-boundary.md  0003-fudge-factor-factorization.md  0004-condensation-model.md  0005-wall-boundary-condition.md  0006-radiation-gray-two-mean-fld.md  0007-eos-opacity-table-pipeline.md  0008-2d-sweep-effective-gamma.md  0009-useful-f-gate.md  0010-facesheet-damage-regime.md  0011-sic-ti-shock-reflection.md  0012-transitional-anchor.md  0013-dual-curve-deliverable.md  0014-ablating-wall.md  0015-soot-seed-temperature-ceiling.md  0016-split-radiative-loss-channel.md  0017-multi-species-spotcheck-tables.md  0018-monorepo-cargo-workspace-uv-makefile.md  0019-plaintext-json-jsonl-boundary.md  0020-rayleigh-taylor-wall-mixing.md  0021-plate-shape-deep-dish-foreclosed.md  0022-staggered-artificial-viscosity-lagrangian-hydro.md  0023-2d-axisymmetric-euler-kernel-numerics.md  0024-wall-side-cushion-cannot-relieve-peak.md  0025-commit-cited-deliverable-artifacts.md  0026-frozen-recombination-bracket.md  0027-heavy-plate-analytic-structural-bound.md  0028-shape-sensitivity-fixed-design-protocol.md  0029-ti-tmc-laminate-spall-mitigation.md
python/puffsat/: __init__.py  analysis.py  eos_cool.py  eos_water.py  fetch_tops.py  heavyplate.py  jupiter.py  sensitivity.py  shape.py  smoke.py  structure.py  tables.py  tops.py
python/tests/: test_analysis.py  test_eos_cool.py  test_eos_water.py  test_heavyplate.py  test_jupiter.py  test_sensitivity.py  test_shape.py  test_structure.py  test_tables.py  test_tops.py
