[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"                        # safe Rust only; opt-in requires sign-off (CLAUDE.md)
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }  # a group: lower priority so lints can override

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }    # correctness/style: must be clean (-D warnings in CI)
pedantic = { level = "warn", priority = -1 } # guidance, not a gate (noisy on numerics)

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
